<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>pl.lolczak</groupId>
    <artifactId>robo-drive-recorder-parent</artifactId>
    <version>1.0-SNAPSHOT</version>
  </parent>

  <groupId>pl.lolczak</groupId>
  <artifactId>robo-drive-recorder</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>apk</packaging>
  <name>robo-drive-recorder - Application</name>

  <dependencies>
    <dependency>
      <groupId>android</groupId>
      <artifactId>android</artifactId>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.scala-lang</groupId>
      <artifactId>scala-library</artifactId>
      <version>${scala.version}</version>
    </dependency>
    <dependency>
      <groupId>org.scaloid</groupId>
      <artifactId>scaloid_2.10</artifactId>
      <version>2.3-8</version>
    </dependency>
    <dependency>
      <groupId>com.android.support</groupId>
      <artifactId>appcompat-v7</artifactId>
      <version>19.0.2</version>
      <type>apklib</type>
    </dependency>
    <dependency>
      <groupId>com.android.support</groupId>
      <artifactId>appcompat-v7</artifactId>
      <version>19.0.2</version>
      <type>jar</type>
    </dependency>
    <dependency>
      <groupId>com.android.support</groupId>
      <artifactId>support-v4</artifactId>
      <version>19.0.2</version>
      <type>jar</type>
    </dependency>
    <dependency>
      <groupId>org.scalatest</groupId>
      <artifactId>scalatest_2.10</artifactId>
      <version>2.0</version>
      <scope>test</scope>
    </dependency>
    <!--LOGGING-->
    <dependency>
      <groupId>com.typesafe</groupId>
      <artifactId>scalalogging-slf4j_2.10</artifactId>
      <version>1.0.1</version>
      <exclusions>
        <exclusion>
          <groupId>org.slf4j</groupId>
          <artifactId>slf4j-api</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>1.7.5</version>
    </dependency>
    <!--todo-->
    <!--<dependency>-->
    <!--<groupId>eu.lp0.slf4j</groupId>-->
    <!--<artifactId>slf4j-android</artifactId>-->
    <!--<version>1.7.5-7</version>-->
    <!--</dependency>-->
    <!--Serialization-->
    <dependency>
      <groupId>com.netflix.rxjava</groupId>
      <artifactId>rxjava-scala</artifactId>
      <version>0.16.1</version>
    </dependency>

  </dependencies>

  <build>
    <finalName>${project.artifactId}</finalName>
    <resources>
      <resource>
        <directory>${project.basedir}/src/main/resources</directory>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-resources-plugin</artifactId>
        <executions>
          <execution>
            <!-- use the copy resources instead of resources, which adds it to
              the eclipse buildpath -->
            <phase>initialize</phase>
            <goals>
              <goal>copy-resources</goal>
            </goals>
            <configuration>
              <outputDirectory>${project.basedir}/res</outputDirectory>
              <resources>
                <resource>
                  <directory>${project.basedir}/src/templates/res</directory>
                  <targetPath>${project.basedir}/res</targetPath>
                  <filtering>true</filtering>
                </resource>
              </resources>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>com.jayway.maven.plugins.android.generation2</groupId>
        <artifactId>android-maven-plugin</artifactId>
        <extensions>true</extensions>
        <configuration>
          <androidManifestFile>${project.basedir}/AndroidManifest.xml</androidManifestFile>
          <assetsDirectory>${project.basedir}/assets</assetsDirectory>
          <resourceDirectory>${project.basedir}/res</resourceDirectory>
          <nativeLibrariesDirectory>${project.basedir}/src/main/native</nativeLibrariesDirectory>
          <sdk>
            <platform>19</platform>
          </sdk>
          <deleteConflictingFiles>true</deleteConflictingFiles>
          <undeployBeforeDeploy>true</undeployBeforeDeploy>
          <dex>
            <jvmArguments>
              <jvmArgument>-Xmx1024M</jvmArgument>
              <jvmArgument>-XX:MaxPermSize=512M</jvmArgument>
            </jvmArguments>
          </dex>
          <proguard>
            <skip>false</skip>
            <config>proguard.conf</config>
            <jvmArguments>
              <jvmArgument>-Xmx1024M</jvmArgument>
            </jvmArguments>
          </proguard>
        </configuration>
        <executions>
          <execution>
            <id>manifestUpdate</id>
            <phase>process-resources</phase>
            <goals>
              <goal>manifest-update</goal>
            </goals>
          </execution>
          <execution>
            <id>alignApk</id>
            <phase>package</phase>
            <goals>
              <goal>zipalign</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>2.3.2</version>
        <configuration>
          <source>1.6</source>
          <target>1.6</target>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.scala-tools</groupId>
        <artifactId>maven-scala-plugin</artifactId>
        <version>2.15.2</version>
        <configuration>
          <scalaVersion>${scala.version}</scalaVersion>
          <!--<args>-->
            <!--<arg>-Xlog-implicits</arg>-->
          <!--</args>-->
        </configuration>
        <executions>
          <execution>
            <id>scala-compile-first</id>
            <phase>process-resources</phase>
            <goals>
              <goal>add-source</goal>
              <goal>compile</goal>
              <goal>testCompile</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>build-helper-maven-plugin</artifactId>
        <version>1.7</version>
        <executions>
          <execution>
            <id>add-source</id>
            <phase>generate-sources</phase>
            <goals>
              <goal>add-source</goal>
            </goals>
            <configuration>
              <sources>
                <source>src/main/scala</source>
              </sources>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <!-- disable surefire -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.7</version>
        <configuration>
          <skipTests>true</skipTests>
        </configuration>
      </plugin>
      <!-- enable scalatest -->
      <plugin>
        <groupId>org.scalatest</groupId>
        <artifactId>scalatest-maven-plugin</artifactId>
        <version>1.0-RC2</version>
        <configuration>
          <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
          <junitxml>.</junitxml>
          <filereports>WDF TestSuite.txt</filereports>
          <wildcardSuites>pl</wildcardSuites>
          <!--<suites>pl.lolczak.buffer.CyclicBufferSpec</suites>-->
          <skipTests>true</skipTests>
        </configuration>
        <executions>
          <execution>
            <id>test</id>
            <goals>
              <goal>test</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>release</id>
      <dependencies>
        <dependency>
          <groupId>eu.lp0.slf4j</groupId>
          <artifactId>slf4j-android</artifactId>
          <version>1.7.5-7</version>
        </dependency>
      </dependencies>
    </profile>
  </profiles>

  <!--<profiles>
  <profile>
    <id>release</id>
    &lt;!&ndash; via this activation the profile is automatically used when the release
      is done with the maven release plugin &ndash;&gt;
    <activation>
      <property>
        <name>performRelease</name>
        <value>true</value>
      </property>
    </activation>
    <build>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jarsigner-plugin</artifactId>
          <executions>
            <execution>
              <id>signing</id>
              <goals>
                <goal>sign</goal>
                <goal>verify</goal>
              </goals>
              <phase>package</phase>
              <inherited>true</inherited>
              <configuration>
                <removeExistingSignatures>true</removeExistingSignatures>
                <archiveDirectory />
                <includes>
                  <include>${project.build.directory}/${project.artifactId}.apk</include>
                </includes>
                <keystore>${sign.keystore}</keystore>
                <alias>${sign.alias}</alias>
                <storepass>${sign.storepass}</storepass>
                <keypass>${sign.keypass}</keypass>
                <verbose>false</verbose>
                <arguments>
                  <argument>-sigalg</argument><argument>MD5withRSA</argument>
                  <argument>-digestalg</argument><argument>SHA1</argument>
                </arguments>
              </configuration>
            </execution>
          </executions>
        </plugin>
        &lt;!&ndash; the signed apk then needs to be zipaligned and we activate proguard
          and we run the manifest update &ndash;&gt;
        <plugin>
          <groupId>com.jayway.maven.plugins.android.generation2</groupId>
          <artifactId>android-maven-plugin</artifactId>
          <inherited>true</inherited>
          <configuration>
            <release>true</release>
            <sign>
              <debug>false</debug>
            </sign>
            <zipalign>
              <skip>false</skip>
              <verbose>true</verbose>
              <inputApk>${project.build.directory}/${project.artifactId}.apk</inputApk>
              <outputApk>${project.build.directory}/${project.artifactId}-signed-aligned.apk
              </outputApk>
            </zipalign>
            <manifest>
              <debuggable>false</debuggable>
              <versionCodeAutoIncrement>true</versionCodeAutoIncrement>
            </manifest>
            &lt;!&ndash; Change to true to skip Proguard &ndash;&gt;
            <proguard>
              <skip>false</skip>
              <config>proguard.conf</config>
            </proguard>
          </configuration>
          <executions>
            <execution>
              <id>manifestUpdate</id>
              <phase>process-resources</phase>
              <goals>
                <goal>manifest-update</goal>
              </goals>
            </execution>
            <execution>
              <id>alignApk</id>
              <phase>package</phase>
              <goals>
                <goal>zipalign</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>build-helper-maven-plugin</artifactId>
          <configuration>
            <artifacts>
              <artifact>
                <file>${project.build.directory}/${project.artifactId}-signed-aligned.apk</file>
                <type>apk</type>
                <classifier>signed-aligned</classifier>
              </artifact>
              <artifact>
                <file>${project.build.directory}/proguard/mapping.txt</file>
                <type>map</type>
                <classifier>release</classifier>
              </artifact>
            </artifacts>
          </configuration>
          <executions>
            <execution>
              <id>attach-signed-aligned</id>
              <phase>package</phase>
              <goals>
                <goal>attach-artifact</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
      </plugins>
    </build>
  </profile>
  </profiles>-->

  <repositories>
    <repository>
      <id>scala-tools.org</id>
      <name>Scala-tools Maven2 Repository</name>
      <url>http://www.scala-tools.org/repo-releases</url>
    </repository>
    <repository>
      <id>sonatype</id>
      <name>Sonatype</name>
      <url>http://repository.sonatype.org/content/groups/public/</url>
    </repository>
    <repository>
      <id>oss-sonatype</id>
      <name>Oss-Sonatype</name>
      <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
      <snapshots>
        <enabled>true</enabled>
        <updatePolicy>always</updatePolicy>
        <checksumPolicy>ignore</checksumPolicy>
      </snapshots>
    </repository>
  </repositories>
  <pluginRepositories>
    <pluginRepository>
      <id>scala-tools.org</id>
      <name>Scala-tools Maven2 Repository</name>
      <url>http://www.scala-tools.org/repo-releases</url>
    </pluginRepository>
    <pluginRepository>
      <id>sonatype</id>
      <name>Sonatype</name>
      <url>http://repository.sonatype.org/content/groups/public/</url>
    </pluginRepository>
  </pluginRepositories>

</project>
